# nn_toy_classifier

./: .gitignore  CMakeLists.txt  nn_toy_classifier.cpp
